# jshape

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-node.yml  publish-python.yml  publish.yml
bindings/node/: Cargo.toml  README.md
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
scripts/: prepare_node_pkg.py
src/: lib.rs  main.rs
