[package]
name = "jshape-node-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Node.js WebAssembly bindings for jshape"
readme = "README.md"
homepage = "https://github.com/Quantatirsk/jshape"
repository = "https://github.com/Quantatirsk/jshape"
keywords = ["json", "schema", "shape", "nodejs", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jshape = { path = "../.." }
wasm-bindgen = "0.2.114"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
