[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "jshape"
requires-python = ">=3.8"
description = "Repair malformed JSON and render a stable, human-readable structural outline."
readme = "README.md"
license = "MIT"
keywords = ["json", "schema", "shape", "repair", "python"]
urls = { Homepage = "https://github.com/Quantatirsk/jshape", Repository = "https://github.com/Quantatirsk/jshape" }
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: JSON",
]

[tool.maturin]
manifest-path = "Cargo.toml"
